--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ yarn-error.log
 !/storage/framework/cache/.gitkeep
 !/storage/framework/sessions/.gitkeep
 !/storage/framework/views/.gitkeep
+
+# Archivos zip grandes
+*.zip
